<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="com.vegeta.my.dealer.activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/login_hedar"
                android:textColor="#fff"
                android:textSize="@dimen/_15sdp" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/login_img_go_back"
                android:layout_width="50sp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/back"

                />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/login_img_logo"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:scaleType="fitXY"
                android:src="@drawable/logo2" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/login_img_user"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/user" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_user_name"
                    android:layout_centerVertical="true"
                    android:textColorHint="#706b6b"
                    android:layout_toLeftOf="@id/login_img_user"
                    android:layout_marginLeft="@dimen/_5sdp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/login_edit_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@android:color/white"
                        />

                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/login_img_password"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/password" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:layout_centerVertical="true"
                    android:textColorHint="#706b6b"
                    app:passwordToggleEnabled="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_toLeftOf="@id/login_img_password"
                    app:passwordToggleTint="@android:color/white">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/login_edit_user_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"

                        />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/login_btn_design"
                android:text="@string/login_btn_login"
                android:fontFamily="@font/cairo_semibold"
                android:textSize="@dimen/_13sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <!--<ImageView
                    android:id="@+id/facebook"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:src="@drawable/facebook" />
-->
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/google"
                    android:visibility="gone"/>

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:src="@drawable/twitter"
                    android:visibility="gone"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_10sdp"
                android:text="ليس لديك حساب؟"
                android:textAlignment="center"
                android:fontFamily="@font/cairo_semibold"
                android:textColor="#a6a1a1"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/login_btn_create_new_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_3sdp"
                android:text="انشاء حساب"
                android:textAlignment="center"
                android:textColor="#fff"
                android:fontFamily="@font/cairo_semibold"
                android:textSize="@dimen/_15sdp" />


        </LinearLayout>

    </ScrollView>
</RelativeLayout>
